@@ -3,6 +3,16 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2011-08-17	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-84-85-prsim-precharge-check-12:
+	  current_path_graph: implemented graph walks to identify
+		paths from precharge nodes to supplies and logical
+		output nodes.  Untested.
+	  net/netgraph.h: factored out transistor_base base class
+		for use in current_path_graph.
+
+
 2011-08-16	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-84-85-prsim-precharge-check-11:
